--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,3 +1,9 @@
-* Improved the performance of network requests made by the app to prevent port/socket exhaustion during heavy usage scenarios.
+* Improved the performance of network requests made by the app to prevent port/socket exhaustion during heavy usage scenarios. Creation will be added in the next update.
 
-* The home page now has a new section that shows whether your Windows is activated and if so how. It shows detailed information about activation method being used, license status, expiration date (if applicable), and more.
+* The home page now has a new section that shows whether your Windows is activated and if so how. It shows detailed information that are not normally visible in the operating system interface about activation method being used, license status, expiration date (if applicable), and more.
+
+* The Update page now has a new section that allows you to install any MSIX/MSIXBundle package on your system. If the package you're trying to install is signed then it will be directly installed. If it is not signed, its designated certificate common name and hashing algorithm will be detected from its manifest, a unique matching certificate will be generated on your system in order to sign the package and then install it. This significantly simplifies any app package installation by abstracting and automating the entire process.
+
+* The app now asks for confirmation before closing when there are ongoing operations such as file scans, policy creations, log scans and so on, to prevent accidental termination of important long running tasks. You can configure this new feature in the app's settings page. It has 3 modes: Always ask for confirmation, Automatic (which will only ask if there are ongoing operations and is the default value), and Never ask for confirmation.
+
+* See the complete list on the GitHub.
