--- a/AppControl Manager/Strings/AR/Resources.resw
+++ b/AppControl Manager/Strings/AR/Resources.resw
@@ -964,24 +964,6 @@
   <data name="ASRError" xml:space="preserve">
     <value>حدث خطأ أثناء محاولة إزالة استثناءات قاعدة ASR ويمكنك تجاهله بأمان: </value>
   </data>
-  <data name="InstallingPackage" xml:space="preserve">
-    <value>جارٍ تثبيت حزمة AppControl Manager MSIXBundle</value>
-  </data>
-  <data name="InstallationError" xml:space="preserve">
-    <value>خطأ أثناء تثبيت AppControl Manager. رمز الخطأ: </value>
-  </data>
-  <data name="InstallationErrorText" xml:space="preserve">
-    <value> - نص الخطأ: </value>
-  </data>
-  <data name="InstallationCanceled" xml:space="preserve">
-    <value>تم إلغاء تثبيت AppControl Manager</value>
-  </data>
-  <data name="InstallationSucceeded" xml:space="preserve">
-    <value>تم تثبيت AppControl Manager بنجاح</value>
-  </data>
-  <data name="UnknownInstallationIssue" xml:space="preserve">
-    <value>حدثت مشكلة غير معروفة أثناء تثبيت AppControl Manager</value>
-  </data>
   <data name="ASRAddError" xml:space="preserve">
     <value>حدث خطأ أثناء محاولة إضافة استثناءات قاعدة ASR ويمكنك تجاهله بأمان: </value>
   </data>
@@ -2395,27 +2377,6 @@
   </data>
   <data name="CertificatesSearchBox.AutomationProperties.HelpText" xml:space="preserve">
     <value>ابحث بين بيانات تفاصيل الشهادة</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Description" xml:space="preserve">
-    <value>تصفح مسار ملف AppControl Manager MSIXBundle على جهازك ثم عد إلى صفحة التحديث لتثبيته.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Header" xml:space="preserve">
-    <value>اختياري: حدد مسار ملف MSIXBundle</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
-    <value>تصفح مسار ملف AppControl Manager MSIXBundle على جهازك ثم عد إلى صفحة التحديث لتثبيته.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
-    <value>تصفح مسار ملف AppControl Manager MSIXBundle على جهازك ثم عد إلى صفحة التحديث لتثبيته.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.Content" xml:space="preserve">
-    <value>تصفح مسار MSIXBundle</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>يفتح منتقي الملفات مما يتيح لك اختيار ملف AppControl Manager MSIXBundle على جهازك.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.AutomationProperties.HelpText" xml:space="preserve">
-    <value>يفتح منتقي الملفات مما يتيح لك اختيار ملف AppControl Manager MSIXBundle على جهازك.</value>
   </data>
   <data name="ConfirmUseOfCustomMSIXPathSettingsCard.Description" xml:space="preserve">
     <value>تأكد من أنك تريد استخدام ملف MSIXBundle المخصص المحدد بدلاً من تنزيله تلقائيًا من GitHub. سيؤدي هذا إلى تجاوز التحقق من التحديث عبر الإنترنت وتجاوز تنزيل ملف MSIXBundle من GitHub.</value>
@@ -5363,9 +5324,6 @@
   <data name="CreateTextBlock.Text" xml:space="preserve">
     <value>إنشاء</value>
   </data>
-  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
-    <value>مسار MSIXBundle مخصص</value>
-  </data>
   <data name="OpenInFileExplorer.Text" xml:space="preserve">
     <value>فتح في مستكشف الملفات</value>
   </data>
@@ -6335,5 +6293,86 @@
   </data>
   <data name="CreateManagedInstallerButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>قم بإنشاء وتحميل سياسة المثبّت المُدار في المستأجر الخاص بك والتي ستسمح للتطبيقات التي يتم نشرها عبر Intune بأن تكون مسموحة تلقائياً على الأجهزة التي تستخدم سياسات التحكم في التطبيقات.</value>
+  </data>
+    <data name="InstallAppPackagesSettingsCard.Header" xml:space="preserve">
+    <value>تثبيت حزم التطبيقات</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.Description" xml:space="preserve">
+    <value>استعرض للعثور على أي حزمة تطبيق مثل ملف MSIX أو MSIXBundle لتثبيتها على النظام.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>استعرض للعثور على أي حزمة تطبيق مثل ملف MSIX أو MSIXBundle لتثبيتها على النظام.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>استعرض للعثور على أي حزمة تطبيق مثل ملف MSIX أو MSIXBundle لتثبيتها على النظام.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Description" xml:space="preserve">
+    <value>استعرض للعثور على ملف حزمة تطبيق، والذي يكون عادةً ملفات MSIX أو MSIXBundle، لتثبيتها على الجهاز. إذا كانت حزمة التطبيق المحددة موقعة، فسيتم تثبيتها مباشرة. أما إذا كانت غير موقعة، فسيتم إنشاء شهادة فريدة على جهازك لتوقيع تلك الحزمة ثم تثبيتها.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Header" xml:space="preserve">
+    <value>استعراض للعثور على ملف حزمة تطبيق</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>استعرض للعثور على ملف حزمة تطبيق، والذي يكون عادةً ملفات MSIX أو MSIXBundle، لتثبيتها على الجهاز. إذا كانت حزمة التطبيق المحددة موقعة، فسيتم تثبيتها مباشرة. أما إذا كانت غير موقعة، فسيتم إنشاء شهادة فريدة على جهازك لتوقيع تلك الحزمة ثم تثبيتها.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>استعرض للعثور على ملف حزمة تطبيق، والذي يكون عادةً ملفات MSIX أو MSIXBundle، لتثبيتها على الجهاز. إذا كانت حزمة التطبيق المحددة موقعة، فسيتم تثبيتها مباشرة. أما إذا كانت غير موقعة، فسيتم إنشاء شهادة فريدة على جهازك لتوقيع تلك الحزمة ثم تثبيتها.</value>
+  </data>
+  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
+    <value>تثبيت مخصص لحزمة التطبيق</value>
+  </data>
+  <data name="InstallAppPackagesButton.Content" xml:space="preserve">
+    <value>تثبيت</value>
+  </data>
+  <data name="InstallAppPackagesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>تثبيت حزمة التطبيق المحددة على النظام.</value>
+  </data>
+  <data name="InstallAppPackagesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>تثبيت حزمة التطبيق المحددة على النظام.</value>
+  </data>
+  <data name="ConfirmExitTitle" xml:space="preserve">
+  <value>الخروج من التطبيق؟</value>
+</data>
+<data name="ConfirmExitMsg" xml:space="preserve">
+  <value>هناك عملية قيد التنفيذ حالياً. قد يؤدي الخروج الآن إلى مهام غير مكتملة. هل أنت متأكد أنك تريد الخروج؟</value>
+</data>
+  <data name="AppCloseConfirmationSettingsCard.Description" xml:space="preserve">
+    <value>اختر ما إذا كان يجب على التطبيق طلب التأكيد عند إغلاقه.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.Header" xml:space="preserve">
+    <value>تأكيد إغلاق التطبيق</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>اختر ما إذا كان يجب على التطبيق طلب التأكيد عند إغلاقه.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>اختر ما إذا كان يجب على التطبيق طلب التأكيد عند إغلاقه.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.Content" xml:space="preserve">
+    <value>مطلقاً</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>لا تطلب التأكيد مطلقاً عند إغلاق التطبيق.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>لا تطلب التأكيد مطلقاً عند إغلاق التطبيق.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.Content" xml:space="preserve">
+    <value>دائماً</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>اطلب التأكيد دائماً عند إغلاق التطبيق.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>اطلب التأكيد دائماً عند إغلاق التطبيق.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.Content" xml:space="preserve">
+    <value>تلقائي</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>اطلب التأكيد قبل إغلاق التطبيق فقط في ظروف معينة عند وجود عملية جارية.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>اطلب التأكيد قبل إغلاق التطبيق فقط في ظروف معينة عند وجود عملية جارية.</value>
   </data>
 </root>
