--- a/AppControl Manager/Strings/el-GR/Resources.resw
+++ b/AppControl Manager/Strings/el-GR/Resources.resw
@@ -964,24 +964,6 @@
   <data name="ASRError" xml:space="preserve">
     <value>Παρουσιάστηκε σφάλμα κατά την προσπάθεια αφαίρεσης των εξαιρέσεων κανόνων ASR, το οποίο μπορείτε να αγνοήσετε με ασφάλεια: </value>
   </data>
-  <data name="InstallingPackage" xml:space="preserve">
-    <value>Εγκατάσταση του πακέτου MSIXBundle του AppControl Manager</value>
-  </data>
-  <data name="InstallationError" xml:space="preserve">
-    <value>Σφάλμα κατά την εγκατάσταση του AppControl Manager. Κωδικός σφάλματος: </value>
-  </data>
-  <data name="InstallationErrorText" xml:space="preserve">
-    <value> - Κείμενο σφάλματος: </value>
-  </data>
-  <data name="InstallationCanceled" xml:space="preserve">
-    <value>Η εγκατάσταση του AppControl Manager ακυρώθηκε</value>
-  </data>
-  <data name="InstallationSucceeded" xml:space="preserve">
-    <value>Η εγκατάσταση του AppControl Manager ολοκληρώθηκε με επιτυχία</value>
-  </data>
-  <data name="UnknownInstallationIssue" xml:space="preserve">
-    <value>Υπήρξε ένα άγνωστο πρόβλημα κατά την εγκατάσταση του AppControl Manager</value>
-  </data>
   <data name="ASRAddError" xml:space="preserve">
     <value>Παρουσιάστηκε σφάλμα κατά την προσπάθεια προσθήκης των εξαιρέσεων κανόνων ASR, το οποίο μπορείτε να αγνοήσετε με ασφάλεια: </value>
   </data>
@@ -2395,27 +2377,6 @@
   </data>
   <data name="CertificatesSearchBox.AutomationProperties.HelpText" xml:space="preserve">
     <value>Αναζήτηση μεταξύ των δεδομένων λεπτομερειών πιστοποιητικού</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Description" xml:space="preserve">
-    <value>Αναζήτηση για τη διαδρομή του αρχείου MSIXBundle του AppControl Manager στη συσκευή σας και στη συνέχεια επιστρέψτε στη σελίδα ενημέρωσης για να το εγκαταστήσετε.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Header" xml:space="preserve">
-    <value>Προαιρετικό: επιλέξτε τη διαδρομή του αρχείου MSIXBundle</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
-    <value>Αναζήτηση για τη διαδρομή του αρχείου MSIXBundle του AppControl Manager στη συσκευή σας και στη συνέχεια επιστρέψτε στη σελίδα ενημέρωσης για να το εγκαταστήσετε.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
-    <value>Αναζήτηση για τη διαδρομή του αρχείου MSIXBundle του AppControl Manager στη συσκευή σας και στη συνέχεια επιστρέψτε στη σελίδα ενημέρωσης για να το εγκαταστήσετε.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.Content" xml:space="preserve">
-    <value>Αναζήτηση για τη διαδρομή MSIXBundle</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>Ανοίγει τον επιλογέα αρχείων επιτρέποντάς σας να επιλέξετε το αρχείο MSIXBundle του AppControl Manager στη συσκευή σας.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.AutomationProperties.HelpText" xml:space="preserve">
-    <value>Ανοίγει τον επιλογέα αρχείων επιτρέποντάς σας να επιλέξετε το αρχείο MSIXBundle του AppControl Manager στη συσκευή σας.</value>
   </data>
   <data name="ConfirmUseOfCustomMSIXPathSettingsCard.Description" xml:space="preserve">
     <value>Επιβεβαιώστε ότι θέλετε να χρησιμοποιήσετε το επιλεγμένο προσαρμοσμένο αρχείο MSIXBundle αντί να το κατεβάσετε αυτόματα από το GitHub. Αυτό θα παρακάμψει τον διαδικτυακό έλεγχο ενημέρωσης και θα παραλείψει τη λήψη του αρχείου MSIXBundle από το GitHub.</value>
@@ -5363,9 +5324,6 @@
   <data name="CreateTextBlock.Text" xml:space="preserve">
     <value>Δημιουργία</value>
   </data>
-  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
-    <value>Προσαρμοσμένη Διαδρομή MSIXBundle</value>
-  </data>
   <data name="OpenInFileExplorer.Text" xml:space="preserve">
     <value>Άνοιγμα στην Εξερεύνηση Αρχείων</value>
   </data>
@@ -6335,5 +6293,86 @@
   </data>
   <data name="CreateManagedInstallerButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>Δημιουργήστε και αποστείλετε μια πολιτική διαχειριζόμενου προγράμματος εγκατάστασης στον μισθωτή σας που θα επιτρέπει στις εφαρμογές που αναπτύσσονται μέσω του Intune να επιτρέπονται αυτόματα σε συσκευές που χρησιμοποιούν πολιτικές ελέγχου εφαρμογών.</value>
+  </data>
+    <data name="InstallAppPackagesSettingsCard.Header" xml:space="preserve">
+    <value>Εγκατάσταση πακέτων εφαρμογών</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.Description" xml:space="preserve">
+    <value>Αναζητήστε οποιοδήποτε πακέτο εφαρμογής, όπως αρχείο MSIX ή MSIXBundle, για εγκατάσταση στο σύστημα.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Αναζητήστε οποιοδήποτε πακέτο εφαρμογής, όπως αρχείο MSIX ή MSIXBundle, για εγκατάσταση στο σύστημα.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Αναζητήστε οποιοδήποτε πακέτο εφαρμογής, όπως αρχείο MSIX ή MSIXBundle, για εγκατάσταση στο σύστημα.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Description" xml:space="preserve">
+    <value>Αναζητήστε ένα αρχείο πακέτου εφαρμογής, τα οποία είναι συνήθως αρχεία MSIX ή MSIXBundle, για εγκατάσταση στη συσκευή. Εάν το επιλεγμένο πακέτο εφαρμογής είναι υπογεγραμμένο, θα εγκατασταθεί απευθείας. Εάν δεν είναι υπογεγραμμένο, θα δημιουργηθεί ένα μοναδικό πιστοποιητικό στη συσκευή σας για την υπογραφή του πακέτου και στη συνέχεια την εγκατάστασή του.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Header" xml:space="preserve">
+    <value>Αναζήτηση αρχείου πακέτου εφαρμογής</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Αναζητήστε ένα αρχείο πακέτου εφαρμογής, τα οποία είναι συνήθως αρχεία MSIX ή MSIXBundle, για εγκατάσταση στη συσκευή. Εάν το επιλεγμένο πακέτο εφαρμογής είναι υπογεγραμμένο, θα εγκατασταθεί απευθείας. Εάν δεν είναι υπογεγραμμένο, θα δημιουργηθεί ένα μοναδικό πιστοποιητικό στη συσκευή σας για την υπογραφή του πακέτου και στη συνέχεια την εγκατάστασή του.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Αναζητήστε ένα αρχείο πακέτου εφαρμογής, τα οποία είναι συνήθως αρχεία MSIX ή MSIXBundle, για εγκατάσταση στη συσκευή. Εάν το επιλεγμένο πακέτο εφαρμογής είναι υπογεγραμμένο, θα εγκατασταθεί απευθείας. Εάν δεν είναι υπογεγραμμένο, θα δημιουργηθεί ένα μοναδικό πιστοποιητικό στη συσκευή σας για την υπογραφή του πακέτου και στη συνέχεια την εγκατάστασή του.</value>
+  </data>
+  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
+    <value>Προσαρμοσμένη εγκατάσταση πακέτου εφαρμογής</value>
+  </data>
+  <data name="InstallAppPackagesButton.Content" xml:space="preserve">
+    <value>Εγκατάσταση</value>
+  </data>
+  <data name="InstallAppPackagesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Εγκαταστήστε το επιλεγμένο πακέτο εφαρμογής στο σύστημα.</value>
+  </data>
+  <data name="InstallAppPackagesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Εγκαταστήστε το επιλεγμένο πακέτο εφαρμογής στο σύστημα.</value>
+  </data>
+  <data name="ConfirmExitTitle" xml:space="preserve">
+  <value>Έξοδος από την εφαρμογή;</value>
+</data>
+<data name="ConfirmExitMsg" xml:space="preserve">
+  <value>Μια λειτουργία βρίσκεται σε εξέλιξη. Η έξοδος τώρα ενδέχεται να οδηγήσει σε ημιτελείς εργασίες. Είστε βέβαιοι ότι θέλετε να βγείτε;</value>
+</data>
+  <data name="AppCloseConfirmationSettingsCard.Description" xml:space="preserve">
+    <value>Επιλέξτε αν η εφαρμογή θα ζητά επιβεβαίωση κατά το κλείσιμό της.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.Header" xml:space="preserve">
+    <value>Επιβεβαίωση κλεισίματος εφαρμογής</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Επιλέξτε αν η εφαρμογή θα ζητά επιβεβαίωση κατά το κλείσιμό της.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Επιλέξτε αν η εφαρμογή θα ζητά επιβεβαίωση κατά το κλείσιμό της.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.Content" xml:space="preserve">
+    <value>Ποτέ</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Να μη ζητείται ποτέ επιβεβαίωση κατά το κλείσιμο της εφαρμογής.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Να μη ζητείται ποτέ επιβεβαίωση κατά το κλείσιμο της εφαρμογής.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.Content" xml:space="preserve">
+    <value>Πάντα</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Να ζητείται πάντα επιβεβαίωση κατά το κλείσιμο της εφαρμογής.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Να ζητείται πάντα επιβεβαίωση κατά το κλείσιμο της εφαρμογής.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.Content" xml:space="preserve">
+    <value>Αυτόματα</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Να ζητείται επιβεβαίωση πριν από το κλείσιμο της εφαρμογής μόνο υπό ορισμένες συνθήκες, όταν υπάρχει λειτουργία σε εξέλιξη.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Να ζητείται επιβεβαίωση πριν από το κλείσιμο της εφαρμογής μόνο υπό ορισμένες συνθήκες, όταν υπάρχει λειτουργία σε εξέλιξη.</value>
   </data>
 </root>
