--- a/AppControl Manager/Strings/en-US/Resources.resw
+++ b/AppControl Manager/Strings/en-US/Resources.resw
@@ -964,24 +964,6 @@ NOTE: This option is always enforced if any App Control UMCI policy enables it. 
   <data name="ASRError" xml:space="preserve">
     <value>An error occurred while trying to remove the ASR rule exclusions which you can safely ignore: </value>
   </data>
-  <data name="InstallingPackage" xml:space="preserve">
-    <value>Installing the AppControl Manager MSIXBundle package</value>
-  </data>
-  <data name="InstallationError" xml:space="preserve">
-    <value>Error installing The AppControl Manager. Error code: </value>
-  </data>
-  <data name="InstallationErrorText" xml:space="preserve">
-    <value> - Error text: </value>
-  </data>
-  <data name="InstallationCanceled" xml:space="preserve">
-    <value>The AppControl Manager Installation canceled</value>
-  </data>
-  <data name="InstallationSucceeded" xml:space="preserve">
-    <value>The AppControl Manager Installation succeeded</value>
-  </data>
-  <data name="UnknownInstallationIssue" xml:space="preserve">
-    <value>There was an unknown problem installing the AppControl Manager</value>
-  </data>
   <data name="ASRAddError" xml:space="preserve">
     <value>An error occurred while trying to add the ASR rule exclusions which you can safely ignore: </value>
   </data>
@@ -2395,27 +2377,6 @@ NOTE: This option is always enforced if any App Control UMCI policy enables it. 
   </data>
   <data name="CertificatesSearchBox.AutomationProperties.HelpText" xml:space="preserve">
     <value>Search among the certificate details data</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Description" xml:space="preserve">
-    <value>Browse for the AppControl Manager MSIXBundle file path on your device and then go back to the update page to install it.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Header" xml:space="preserve">
-    <value>Optional: select MSIXBundle file path</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
-    <value>Browse for the AppControl Manager MSIXBundle file path on your device and then go back to the update page to install it.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
-    <value>Browse for the AppControl Manager MSIXBundle file path on your device and then go back to the update page to install it.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.Content" xml:space="preserve">
-    <value>Browse for MSIXBundle path</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>Opens the file picker allowing you to pick the AppControl Manager MSIXBundle file on your device.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.AutomationProperties.HelpText" xml:space="preserve">
-    <value>Opens the file picker allowing you to pick the AppControl Manager MSIXBundle file on your device.</value>
   </data>
   <data name="ConfirmUseOfCustomMSIXPathSettingsCard.Description" xml:space="preserve">
     <value>Confirm that you want to use the selected custom MSIXBundle file instead of automatically downloading it from GitHub. This will override online update check and bypass download of MSIXBundle file from GitHub.</value>
@@ -5363,9 +5324,6 @@ NOTE: This option is always enforced if any App Control UMCI policy enables it. 
   <data name="CreateTextBlock.Text" xml:space="preserve">
     <value>Create</value>
   </data>
-  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
-    <value>Custom MSIXBundle Path</value>
-  </data>
   <data name="OpenInFileExplorer.Text" xml:space="preserve">
     <value>Open In File Explorer</value>
   </data>
@@ -6335,5 +6293,86 @@ NOTE: This option is always enforced if any App Control UMCI policy enables it. 
   </data>
   <data name="CreateManagedInstallerButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>Created and upload a Managed Installer policy in your tenant that will allow apps deployed via Intune to be automatically allowed on devices that utilize App Control policies.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.Header" xml:space="preserve">
+    <value>Install App Packages</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.Description" xml:space="preserve">
+    <value>Browse for any app package such as MSIX or MSIXBundle file to install on the system.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Browse for any app package such as MSIX or MSIXBundle file to install on the system.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Browse for any app package such as MSIX or MSIXBundle file to install on the system.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Description" xml:space="preserve">
+    <value>Browse for an application package file, which are typically MSIX or MSIXBundle files, to be installed on the device. If the selected app package is signed, it will be directly installed. if it is unsigned, a unique certificate will be generated on your device in order to sign that package and then install it.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Header" xml:space="preserve">
+    <value>Browse for an app package file</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Browse for an application package file, which are typically MSIX or MSIXBundle files, to be installed on the device. If the selected app package is signed, it will be directly installed. if it is unsigned, a unique certificate will be generated on your device in order to sign that package and then install it.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Browse for an application package file, which are typically MSIX or MSIXBundle files, to be installed on the device. If the selected app package is signed, it will be directly installed. if it is unsigned, a unique certificate will be generated on your device in order to sign that package and then install it.</value>
+  </data>
+  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
+    <value>Custom App Package Installation</value>
+  </data>
+  <data name="InstallAppPackagesButton.Content" xml:space="preserve">
+    <value>Install</value>
+  </data>
+  <data name="InstallAppPackagesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Install the selected app package on the system.</value>
+  </data>
+  <data name="InstallAppPackagesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Install the selected app package on the system.</value>
+  </data>
+<data name="ConfirmExitTitle" xml:space="preserve">
+  <value>Exit Application?</value>
+</data>
+<data name="ConfirmExitMsg" xml:space="preserve">
+  <value>An operation is currently in progress. Exiting now may result in incomplete tasks. Are you sure you want to exit?</value>
+</data>
+  <data name="AppCloseConfirmationSettingsCard.Description" xml:space="preserve">
+    <value>Choose whether the app should ask you for confirmation when closing it.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.Header" xml:space="preserve">
+    <value>App Close Confirmation</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Choose whether the app should ask you for confirmation when closing it.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Choose whether the app should ask you for confirmation when closing it.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.Content" xml:space="preserve">
+    <value>Never</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Never ask for confirmation when closing the app.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Never ask for confirmation when closing the app.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.Content" xml:space="preserve">
+    <value>Always</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Always ask for confirmation when closing the app.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Always ask for confirmation when closing the app.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.Content" xml:space="preserve">
+    <value>Automatic</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Only ask for confirmation before closing the app under certain circumstances when there is an ongoing operation.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Only ask for confirmation before closing the app under certain circumstances when there is an ongoing operation.</value>
   </data>
 </root>
