--- a/AppControl Manager/Strings/fr-FR/Resources.resw
+++ b/AppControl Manager/Strings/fr-FR/Resources.resw
@@ -964,24 +964,6 @@
   <data name="ASRError" xml:space="preserve">
     <value>Une erreur s'est produite lors de la tentative de suppression des exclusions de règle ASR, que vous pouvez ignorer en toute sécurité : </value>
   </data>
-  <data name="InstallingPackage" xml:space="preserve">
-    <value>Installation du package MSIXBundle d'AppControl Manager</value>
-  </data>
-  <data name="InstallationError" xml:space="preserve">
-    <value>Erreur lors de l'installation d'AppControl Manager. Code d'erreur : </value>
-  </data>
-  <data name="InstallationErrorText" xml:space="preserve">
-    <value> - Texte de l'erreur : </value>
-  </data>
-  <data name="InstallationCanceled" xml:space="preserve">
-    <value>L'installation d'AppControl Manager a été annulée</value>
-  </data>
-  <data name="InstallationSucceeded" xml:space="preserve">
-    <value>L'installation d'AppControl Manager a réussi</value>
-  </data>
-  <data name="UnknownInstallationIssue" xml:space="preserve">
-    <value>Un problème inconnu s'est produit lors de l'installation d'AppControl Manager</value>
-  </data>
   <data name="ASRAddError" xml:space="preserve">
     <value>Une erreur s'est produite lors de la tentative d'ajout des exclusions de règle ASR, que vous pouvez ignorer en toute sécurité : </value>
   </data>
@@ -2395,27 +2377,6 @@
   </data>
   <data name="CertificatesSearchBox.AutomationProperties.HelpText" xml:space="preserve">
     <value>Rechercher parmi les données de détails du certificat</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Description" xml:space="preserve">
-    <value>Recherchez le chemin du fichier MSIXBundle d'AppControl Manager sur votre appareil, puis retournez à la page de mise à jour pour l'installer.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Header" xml:space="preserve">
-    <value>Optionnel : sélectionner le chemin du fichier MSIXBundle</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
-    <value>Recherchez le chemin du fichier MSIXBundle d'AppControl Manager sur votre appareil, puis retournez à la page de mise à jour pour l'installer.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
-    <value>Recherchez le chemin du fichier MSIXBundle d'AppControl Manager sur votre appareil, puis retournez à la page de mise à jour pour l'installer.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.Content" xml:space="preserve">
-    <value>Parcourir pour le chemin MSIXBundle</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>Ouvre le sélecteur de fichiers vous permettant de choisir le fichier MSIXBundle d'AppControl Manager sur votre appareil.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.AutomationProperties.HelpText" xml:space="preserve">
-    <value>Ouvre le sélecteur de fichiers vous permettant de choisir le fichier MSIXBundle d'AppControl Manager sur votre appareil.</value>
   </data>
   <data name="ConfirmUseOfCustomMSIXPathSettingsCard.Description" xml:space="preserve">
     <value>Confirmez que vous souhaitez utiliser le fichier MSIXBundle personnalisé sélectionné au lieu de le télécharger automatiquement depuis GitHub. Cela remplacera la vérification des mises à jour en ligne et contournera le téléchargement du fichier MSIXBundle depuis GitHub.</value>
@@ -5363,9 +5324,6 @@
   <data name="CreateTextBlock.Text" xml:space="preserve">
     <value>Créer</value>
   </data>
-  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
-    <value>Chemin Personnalisé MSIXBundle</value>
-  </data>
   <data name="OpenInFileExplorer.Text" xml:space="preserve">
     <value>Ouvrir dans l'Explorateur de Fichiers</value>
   </data>
@@ -6335,5 +6293,86 @@
   </data>
   <data name="CreateManagedInstallerButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>Créez et chargez une stratégie de programme d'installation géré dans votre locataire qui permettra aux applications déployées via Intune d'être automatiquement autorisées sur les appareils utilisant des stratégies de contrôle d'application.</value>
+  </data>
+    <data name="InstallAppPackagesSettingsCard.Header" xml:space="preserve">
+    <value>Installer des paquets d'application</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.Description" xml:space="preserve">
+    <value>Parcourez pour trouver tout paquet d'application tel qu'un fichier MSIX ou MSIXBundle à installer sur le système.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Parcourez pour trouver tout paquet d'application tel qu'un fichier MSIX ou MSIXBundle à installer sur le système.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Parcourez pour trouver tout paquet d'application tel qu'un fichier MSIX ou MSIXBundle à installer sur le système.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Description" xml:space="preserve">
+    <value>Parcourez pour trouver un fichier de paquet d'application, généralement des fichiers MSIX ou MSIXBundle, à installer sur l'appareil. Si le paquet d'application sélectionné est signé, il sera directement installé. S'il n'est pas signé, un certificat unique sera généré sur votre appareil afin de signer ce paquet puis de l'installer.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Header" xml:space="preserve">
+    <value>Parcourir pour trouver un fichier de paquet d'application</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Parcourez pour trouver un fichier de paquet d'application, généralement des fichiers MSIX ou MSIXBundle, à installer sur l'appareil. Si le paquet d'application sélectionné est signé, il sera directement installé. S'il n'est pas signé, un certificat unique sera généré sur votre appareil afin de signer ce paquet puis de l'installer.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Parcourez pour trouver un fichier de paquet d'application, généralement des fichiers MSIX ou MSIXBundle, à installer sur l'appareil. Si le paquet d'application sélectionné est signé, il sera directement installé. S'il n'est pas signé, un certificat unique sera généré sur votre appareil afin de signer ce paquet puis de l'installer.</value>
+  </data>
+  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
+    <value>Installation personnalisée de paquet d'application</value>
+  </data>
+  <data name="InstallAppPackagesButton.Content" xml:space="preserve">
+    <value>Installer</value>
+  </data>
+  <data name="InstallAppPackagesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Installer le paquet d'application sélectionné sur le système.</value>
+  </data>
+  <data name="InstallAppPackagesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Installer le paquet d'application sélectionné sur le système.</value>
+  </data>
+  <data name="ConfirmExitTitle" xml:space="preserve">
+  <value>Quitter l'application ?</value>
+</data>
+<data name="ConfirmExitMsg" xml:space="preserve">
+  <value>Une opération est en cours. Quitter maintenant peut entraîner des tâches incomplètes. Êtes-vous sûr de vouloir quitter ?</value>
+</data>
+  <data name="AppCloseConfirmationSettingsCard.Description" xml:space="preserve">
+    <value>Choisissez si l'application doit vous demander confirmation lors de sa fermeture.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.Header" xml:space="preserve">
+    <value>Confirmation de fermeture de l'application</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Choisissez si l'application doit vous demander confirmation lors de sa fermeture.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Choisissez si l'application doit vous demander confirmation lors de sa fermeture.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.Content" xml:space="preserve">
+    <value>Jamais</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Ne jamais demander confirmation lors de la fermeture de l'application.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Ne jamais demander confirmation lors de la fermeture de l'application.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.Content" xml:space="preserve">
+    <value>Toujours</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Toujours demander confirmation lors de la fermeture de l'application.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Toujours demander confirmation lors de la fermeture de l'application.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.Content" xml:space="preserve">
+    <value>Automatique</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Ne demander confirmation avant la fermeture de l'application que dans certaines circonstances, lorsqu'une opération est en cours.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Ne demander confirmation avant la fermeture de l'application que dans certaines circonstances, lorsqu'une opération est en cours.</value>
   </data>
 </root>
