--- a/AppControl Manager/Strings/he-IL/Resources.resw
+++ b/AppControl Manager/Strings/he-IL/Resources.resw
@@ -964,24 +964,6 @@
   <data name="ASRError" xml:space="preserve">
     <value>אירעה שגיאה בעת ניסיון להסיר את החרגות כלל ה-ASR, אשר ניתן להתעלם ממנה בבטחה: </value>
   </data>
-  <data name="InstallingPackage" xml:space="preserve">
-    <value>מתקין את חבילת ה-MSIXBundle של מנהל AppControl</value>
-  </data>
-  <data name="InstallationError" xml:space="preserve">
-    <value>שגיאה בהתקנת מנהל AppControl. קוד שגיאה: </value>
-  </data>
-  <data name="InstallationErrorText" xml:space="preserve">
-    <value> - טקסט שגיאה: </value>
-  </data>
-  <data name="InstallationCanceled" xml:space="preserve">
-    <value>התקנת מנהל AppControl בוטלה</value>
-  </data>
-  <data name="InstallationSucceeded" xml:space="preserve">
-    <value>התקנת מנהל AppControl הצליחה</value>
-  </data>
-  <data name="UnknownInstallationIssue" xml:space="preserve">
-    <value>הייתה בעיה לא ידועה בהתקנת מנהל AppControl</value>
-  </data>
   <data name="ASRAddError" xml:space="preserve">
     <value>אירעה שגיאה בעת ניסיון להוסיף את החרגות כלל ה-ASR, אשר ניתן להתעלם ממנה בבטחה: </value>
   </data>
@@ -2395,27 +2377,6 @@
   </data>
   <data name="CertificatesSearchBox.AutomationProperties.HelpText" xml:space="preserve">
     <value>חפש בין פרטי התעודה</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Description" xml:space="preserve">
-    <value>עיין ובחר את הנתיב לקובץ MSIXBundle של AppControl Manager במכשיר שלך, ולאחר מכן חזור לדף העדכונים כדי להתקין אותו.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.Header" xml:space="preserve">
-    <value>אופציונלי: בחר נתיב לקובץ MSIXBundle</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
-    <value>עיין ובחר את הנתיב לקובץ MSIXBundle של AppControl Manager במכשיר שלך, ולאחר מכן חזור לדף העדכונים כדי להתקין אותו.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
-    <value>עיין ובחר את הנתיב לקובץ MSIXBundle של AppControl Manager במכשיר שלך, ולאחר מכן חזור לדף העדכונים כדי להתקין אותו.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.Content" xml:space="preserve">
-    <value>עיין ובחר נתיב MSIXBundle</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>פותח בורר קבצים כדי לבחור את קובץ MSIXBundle של AppControl Manager במכשיר שלך.</value>
-  </data>
-  <data name="BrowseForCustomMSIXPathButton.AutomationProperties.HelpText" xml:space="preserve">
-    <value>פותח בורר קבצים כדי לבחור את קובץ MSIXBundle של AppControl Manager במכשיר שלך.</value>
   </data>
   <data name="ConfirmUseOfCustomMSIXPathSettingsCard.Description" xml:space="preserve">
     <value>אשר שברצונך להשתמש בקובץ MSIXBundle המותאם שבחרת במקום להורידו אוטומטית מ-GitHub. פעולה זו תעקוף בדיקת עדכונים מקוונת ותדלג על הורדת הקובץ מ-GitHub.</value>
@@ -5363,9 +5324,6 @@
   <data name="CreateTextBlock.Text" xml:space="preserve">
     <value>צור</value>
   </data>
-  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
-    <value>נתיב MSIXBundle מותאם אישית</value>
-  </data>
   <data name="OpenInFileExplorer.Text" xml:space="preserve">
     <value>פתח בסייר הקבצים</value>
   </data>
@@ -6335,5 +6293,86 @@
   </data>
   <data name="CreateManagedInstallerButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>צור והעלה מדיניות מתקין מנוהל בדייר שלך שתאפשר לאפליקציות שנפרסו דרך Intune להיות מותרות אוטומטית במכשירים המשתמשים במדיניות בקרת יישומים.</value>
+  </data>
+    <data name="InstallAppPackagesSettingsCard.Header" xml:space="preserve">
+    <value>התקנת חבילות יישום</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.Description" xml:space="preserve">
+    <value>דפדף לאיתור חבילת יישום כלשהי כגון קובץ MSIX או MSIXBundle להתקנה במערכת.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>דפדף לאיתור חבילת יישום כלשהי כגון קובץ MSIX או MSIXBundle להתקנה במערכת.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>דפדף לאיתור חבילת יישום כלשהי כגון קובץ MSIX או MSIXBundle להתקנה במערכת.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Description" xml:space="preserve">
+    <value>דפדף לאיתור קובץ חבילת יישום, לרוב קבצי MSIX או MSIXBundle, להתקנה במכשיר. אם חבילת היישום שנבחרה חתומה, היא תותקן באופן ישיר. אם אינה חתומה, תיווצר תעודה ייחודית במכשירך לצורך חתימת החבילה ולאחר מכן התקנתה.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Header" xml:space="preserve">
+    <value>דפדף לאיתור קובץ חבילת יישום</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>דפדף לאיתור קובץ חבילת יישום, לרוב קבצי MSIX או MSIXBundle, להתקנה במכשיר. אם חבילת היישום שנבחרה חתומה, היא תותקן באופן ישיר. אם אינה חתומה, תיווצר תעודה ייחודית במכשירך לצורך חתימת החבילה ולאחר מכן התקנתה.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>דפדף לאיתור קובץ חבילת יישום, לרוב קבצי MSIX או MSIXBundle, להתקנה במכשיר. אם חבילת היישום שנבחרה חתומה, היא תותקן באופן ישיר. אם אינה חתומה, תיווצר תעודה ייחודית במכשירך לצורך חתימת החבילה ולאחר מכן התקנתה.</value>
+  </data>
+  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
+    <value>התקנת חבילת יישום מותאמת אישית</value>
+  </data>
+  <data name="InstallAppPackagesButton.Content" xml:space="preserve">
+    <value>התקן</value>
+  </data>
+  <data name="InstallAppPackagesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>התקן את חבילת היישום שנבחרה במערכת.</value>
+  </data>
+  <data name="InstallAppPackagesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>התקן את חבילת היישום שנבחרה במערכת.</value>
+  </data>
+  <data name="ConfirmExitTitle" xml:space="preserve">
+  <value>יציאה מהיישום?</value>
+</data>
+<data name="ConfirmExitMsg" xml:space="preserve">
+  <value>מתבצעת כעת פעולה. יציאה כעת עלולה להוביל למשימות שלא הושלמו. האם אתה בטוח שברצונך לצאת?</value>
+</data>
+  <data name="AppCloseConfirmationSettingsCard.Description" xml:space="preserve">
+    <value>בחר האם האפליקציה תבקש אישור בעת סגירתה.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.Header" xml:space="preserve">
+    <value>אישור סגירת אפליקציה</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>בחר האם האפליקציה תבקש אישור בעת סגירתה.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>בחר האם האפליקציה תבקש אישור בעת סגירתה.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.Content" xml:space="preserve">
+    <value>אף פעם</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>לעולם אל תבקש אישור בעת סגירת האפליקציה.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>לעולם אל תבקש אישור בעת סגירת האפליקציה.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.Content" xml:space="preserve">
+    <value>תמיד</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>תמיד בקש אישור בעת סגירת האפליקציה.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>תמיד בקש אישור בעת סגירת האפליקציה.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.Content" xml:space="preserve">
+    <value>אוטומטי</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>בקש אישור לפני סגירת האפליקציה רק בנסיבות מסוימות, כאשר מתבצעת פעולה.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>בקש אישור לפני סגירת האפליקציה רק בנסיבות מסוימות, כאשר מתבצעת פעולה.</value>
   </data>
 </root>
