--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -1,5 +1,11 @@
-* The home page now has a new section that shows whether your Windows is activated and if so how. It shows detailed information about activation method being used, license status, expiration date (if applicable), and more.
+* The Update page now has a new section that allows you to install any MSIX/MSIXBundle package on your system. If the package you're trying to install is signed then it will be directly installed. If it is not signed, its designated certificate common name and hashing algorithm will be detected from its manifest, a unique matching certificate will be generated on your system in order to sign the package and then install it. This significantly simplifies any app package installation by abstracting and automating the entire process.
 
-* The Firewall rules that you create in the Windows Firewall page are now instantly made effective instead of waiting for Group Policy engine to apply them on the next cycle.
+* The app now asks for confirmation before closing when there are ongoing operations such as applying/verifying/removing security measures, retrieving MDM information and so on, to prevent accidental termination of important long running tasks. It has 3 modes: Always ask for confirmation, Automatic (which will only ask if there are ongoing operations and is the default value), and Never ask for confirmation. **You can change this setting in the app's settings page.**
 
-* The DISM component of the Harden System Security app is now saved in a more secure location during runtime. This location is ACL'd by default to only grant Write access to System and TrustedInstaller. Other users (even Administrators) have Read and eXecute rights but not Write. This location is cleared by the system when the app is uninstalled.
+* Updated paths to the Dual-use programs in the Windows Firewall category so they point to the locations available in the latest OS versions. `PowerShell.exe` and `hh.exe` are the updated program paths.
+
+* The file/folder picker now opens by default in the user directory instead of OS drive.
+
+* The legacy Notepad program is no longer removed as part of the recommended actions in the Optional Windows Features category.
+
+* See the complete list on the GitHub.
