--- a/Harden System Security/Strings/de-DE/Resources.resw
+++ b/Harden System Security/Strings/de-DE/Resources.resw
@@ -5066,4 +5066,103 @@ Fingerabdruck: {3}</value>
   <data name="StorageSizeAndTemp.Text" xml:space="preserve">
     <value>Speichergröße und Temperatur</value>
   </data>
+    <data name="InstallAppPackagesSettingsCard.Header" xml:space="preserve">
+    <value>App-Pakete installieren</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.Description" xml:space="preserve">
+    <value>Suchen Sie nach einem App-Paket, z. B. einer MSIX- oder MSIXBundle-Datei, um es auf dem System zu installieren.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Suchen Sie nach einem App-Paket, z. B. einer MSIX- oder MSIXBundle-Datei, um es auf dem System zu installieren.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Suchen Sie nach einem App-Paket, z. B. einer MSIX- oder MSIXBundle-Datei, um es auf dem System zu installieren.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Description" xml:space="preserve">
+    <value>Suchen Sie nach einer Anwendungspaketdatei, bei der es sich typischerweise um MSIX- oder MSIXBundle-Dateien handelt, die auf dem Gerät installiert werden soll. Wenn das ausgewählte App-Paket signiert ist, wird es direkt installiert. Wenn es unsigniert ist, wird auf Ihrem Gerät ein eindeutiges Zertifikat generiert, um dieses Paket zu signieren und anschließend zu installieren.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Header" xml:space="preserve">
+    <value>Nach einer App-Paketdatei suchen</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Suchen Sie nach einer Anwendungspaketdatei, bei der es sich typischerweise um MSIX- oder MSIXBundle-Dateien handelt, die auf dem Gerät installiert werden soll. Wenn das ausgewählte App-Paket signiert ist, wird es direkt installiert. Wenn es unsigniert ist, wird auf Ihrem Gerät ein eindeutiges Zertifikat generiert, um dieses Paket zu signieren und anschließend zu installieren.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Suchen Sie nach einer Anwendungspaketdatei, bei der es sich typischerweise um MSIX- oder MSIXBundle-Dateien handelt, die auf dem Gerät installiert werden soll. Wenn das ausgewählte App-Paket signiert ist, wird es direkt installiert. Wenn es unsigniert ist, wird auf Ihrem Gerät ein eindeutiges Zertifikat generiert, um dieses Paket zu signieren und anschließend zu installieren.</value>
+  </data>
+  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
+    <value>Benutzerdefinierte App-Paketinstallation</value>
+  </data>
+  <data name="InstallAppPackagesButton.Content" xml:space="preserve">
+    <value>Installieren</value>
+  </data>
+  <data name="InstallAppPackagesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Installieren Sie das ausgewählte App-Paket auf dem System.</value>
+  </data>
+  <data name="InstallAppPackagesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Installieren Sie das ausgewählte App-Paket auf dem System.</value>
+  </data>
+  <data name="ASRError" xml:space="preserve">
+    <value>Beim Versuch, die ASR-Regelausschlüsse zu entfernen, ist ein Fehler aufgetreten, den Sie getrost ignorieren können: </value>
+  </data>
+  <data name="ASRAddError" xml:space="preserve">
+    <value>Beim Versuch, die ASR-Regelausschlüsse hinzuzufügen, ist ein Fehler aufgetreten, den Sie getrost ignorieren können: </value>
+  </data>
+  <data name="ASRRulesDeserializationFailedMessage" xml:space="preserve">
+  <value>Die JSON-Liste der ASR-Regelausnahmen konnte nicht deserialisiert werden: {0} - Fehler: {1}</value>
+</data>
+  <data name="DeletedCertificateFromStoreMessage" xml:space="preserve">
+    <value>Zertifikat mit dem Common Name: {0} wurde aus dem Speicher gelöscht: {1}</value>
+  </data>
+    <data name="AppControlCertCheckExistingMessage" xml:space="preserve">
+    <value>Es wird geprüft, ob ein Zertifikat mit dem Common Name '{0}' bereits im persönlichen Benutzerspeicher vorhanden ist.</value>
+  </data>
+    <data name="AppControlCertExistingCountRemovingMessage" xml:space="preserve">
+    <value>{0} Zertifikate mit dem Common Name '{1}' sind bereits im System vorhanden. Sie werden entfernt</value>
+  </data>
+  <data name="ConfirmExitTitle" xml:space="preserve">
+  <value>Anwendung beenden?</value>
+</data>
+<data name="ConfirmExitMsg" xml:space="preserve">
+  <value>Ein Vorgang wird derzeit ausgeführt. Das Beenden kann zu unvollständigen Aufgaben führen. Sind Sie sicher, dass Sie beenden möchten?</value>
+</data>
+  <data name="AppCloseConfirmationSettingsCard.Description" xml:space="preserve">
+    <value>Wählen Sie, ob die App beim Schließen eine Bestätigung anfordern soll.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.Header" xml:space="preserve">
+    <value>Bestätigung beim Schließen der App</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Wählen Sie, ob die App beim Schließen eine Bestätigung anfordern soll.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Wählen Sie, ob die App beim Schließen eine Bestätigung anfordern soll.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.Content" xml:space="preserve">
+    <value>Nie</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Beim Schließen der App nie nach einer Bestätigung fragen.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Beim Schließen der App nie nach einer Bestätigung fragen.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.Content" xml:space="preserve">
+    <value>Immer</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Beim Schließen der App immer nach einer Bestätigung fragen.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Beim Schließen der App immer nach einer Bestätigung fragen.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.Content" xml:space="preserve">
+    <value>Automatisch</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Nur unter bestimmten Umständen vor dem Schließen der App nach einer Bestätigung fragen, wenn ein Vorgang läuft.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Nur unter bestimmten Umständen vor dem Schließen der App nach einer Bestätigung fragen, wenn ein Vorgang läuft.</value>
+  </data>
 </root>
