--- a/Harden System Security/Strings/ml-IN/Resources.resw
+++ b/Harden System Security/Strings/ml-IN/Resources.resw
@@ -5066,4 +5066,103 @@
   <data name="StorageSizeAndTemp.Text" xml:space="preserve">
     <value>സ്റ്റോറേജ് വലുപ്പവും താപനിലയും</value>
   </data>
+    <data name="InstallAppPackagesSettingsCard.Header" xml:space="preserve">
+    <value>ആപ്പ് പാക്കേജുകൾ ഇൻസ്റ്റാൾ ചെയ്യുക</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.Description" xml:space="preserve">
+    <value>സിസ്റ്റത്തിൽ ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനായി MSIX അല്ലെങ്കിൽ MSIXBundle ഫയൽ പോലുള്ള ഏതെങ്കിലും ആപ്പ് പാക്കേജ് ബ്രൗസ് ചെയ്യുക.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>സിസ്റ്റത്തിൽ ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനായി MSIX അല്ലെങ്കിൽ MSIXBundle ഫയൽ പോലുള്ള ഏതെങ്കിലും ആപ്പ് പാക്കേജ് ബ്രൗസ് ചെയ്യുക.</value>
+  </data>
+  <data name="InstallAppPackagesSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>സിസ്റ്റത്തിൽ ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനായി MSIX അല്ലെങ്കിൽ MSIXBundle ഫയൽ പോലുള്ള ഏതെങ്കിലും ആപ്പ് പാക്കേജ് ബ്രൗസ് ചെയ്യുക.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Description" xml:space="preserve">
+    <value>ഉപകരണത്തിൽ ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനായി, സാധാരണയായി MSIX അല്ലെങ്കിൽ MSIXBundle ഫയലുകളായ ഒരു ആപ്ലിക്കേഷൻ പാക്കേജ് ഫയൽ ബ്രൗസ് ചെയ്യുക. തിരഞ്ഞെടുത്ത ആപ്പ് പാക്കേജ് ഒപ്പിട്ടതാണെങ്കിൽ (signed), അത് നേരിട്ട് ഇൻസ്റ്റാൾ ചെയ്യപ്പെടും. ഇത് ഒപ്പിടാത്തതാണെങ്കിൽ (unsigned), ആ പാക്കേജ് ഒപ്പിടുന്നതിനും തുടർന്ന് ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനുമായി നിങ്ങളുടെ ഉപകരണത്തിൽ ഒരു അദ്വിതീയ സർട്ടിഫിക്കറ്റ് സൃഷ്ടിക്കപ്പെടും.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.Header" xml:space="preserve">
+    <value>ഒരു ആപ്പ് പാക്കേജ് ഫയലിനായി ബ്രൗസ് ചെയ്യുക</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>ഉപകരണത്തിൽ ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനായി, സാധാരണയായി MSIX അല്ലെങ്കിൽ MSIXBundle ഫയലുകളായ ഒരു ആപ്ലിക്കേഷൻ പാക്കേജ് ഫയൽ ബ്രൗസ് ചെയ്യുക. തിരഞ്ഞെടുത്ത ആപ്പ് പാക്കേജ് ഒപ്പിട്ടതാണെങ്കിൽ (signed), അത് നേരിട്ട് ഇൻസ്റ്റാൾ ചെയ്യപ്പെടും. ഇത് ഒപ്പിടാത്തതാണെങ്കിൽ (unsigned), ആ പാക്കേജ് ഒപ്പിടുന്നതിനും തുടർന്ന് ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനുമായി നിങ്ങളുടെ ഉപകരണത്തിൽ ഒരു അദ്വിതീയ സർട്ടിഫിക്കറ്റ് സൃഷ്ടിക്കപ്പെടും.</value>
+  </data>
+  <data name="BrowseForAppPackagePathSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>ഉപകരണത്തിൽ ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനായി, സാധാരണയായി MSIX അല്ലെങ്കിൽ MSIXBundle ഫയലുകളായ ഒരു ആപ്ലിക്കേഷൻ പാക്കേജ് ഫയൽ ബ്രൗസ് ചെയ്യുക. തിരഞ്ഞെടുത്ത ആപ്പ് പാക്കേജ് ഒപ്പിട്ടതാണെങ്കിൽ (signed), അത് നേരിട്ട് ഇൻസ്റ്റാൾ ചെയ്യപ്പെടും. ഇത് ഒപ്പിടാത്തതാണെങ്കിൽ (unsigned), ആ പാക്കേജ് ഒപ്പിടുന്നതിനും തുടർന്ന് ഇൻസ്റ്റാൾ ചെയ്യുന്നതിനുമായി നിങ്ങളുടെ ഉപകരണത്തിൽ ഒരു അദ്വിതീയ സർട്ടിഫിക്കറ്റ് സൃഷ്ടിക്കപ്പെടും.</value>
+  </data>
+  <data name="UpdatePageCustomMSIXPath" xml:space="preserve">
+    <value>കസ്റ്റം ആപ്പ് പാക്കേജ് ഇൻസ്റ്റാളേഷൻ</value>
+  </data>
+  <data name="InstallAppPackagesButton.Content" xml:space="preserve">
+    <value>ഇൻസ്റ്റാൾ ചെയ്യുക</value>
+  </data>
+  <data name="InstallAppPackagesButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>തിരഞ്ഞെടുത്ത ആപ്പ് പാക്കേജ് സിസ്റ്റത്തിൽ ഇൻസ്റ്റാൾ ചെയ്യുക.</value>
+  </data>
+  <data name="InstallAppPackagesButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>തിരഞ്ഞെടുത്ത ആപ്പ് പാക്കേജ് സിസ്റ്റത്തിൽ ഇൻസ്റ്റാൾ ചെയ്യുക.</value>
+  </data>
+  <data name="ASRError" xml:space="preserve">
+    <value>ASR റൂൾ ഒഴിവാക്കലുകൾ നീക്കം ചെയ്യാൻ ശ്രമിക്കുമ്പോൾ ഒരു പിശക് സംഭവിച്ചു, നിങ്ങൾക്ക് ഇത് സുരക്ഷിതമായി അവഗണിക്കാം: </value>
+  </data>
+  <data name="ASRAddError" xml:space="preserve">
+    <value>ASR റൂൾ ഒഴിവാക്കലുകൾ ചേർക്കാൻ ശ്രമിക്കുമ്പോൾ ഒരു പിശക് സംഭവിച്ചു, നിങ്ങൾക്ക് ഇത് സുരക്ഷിതമായി അവഗണിക്കാം: </value>
+  </data>
+  <data name="ASRRulesDeserializationFailedMessage" xml:space="preserve">
+  <value>ASR റൂൾസ് എക്സെപ്ഷൻസ് ലിസ്റ്റ് JSON ഡീസീരിയലൈസ് ചെയ്യാൻ കഴിഞ്ഞില്ല, അത് ഇതായിരുന്നു: {0} - പിശക്: {1}</value>
+</data>
+  <data name="DeletedCertificateFromStoreMessage" xml:space="preserve">
+    <value>സ്റ്റോറിൽ നിന്ന് കോമൺ നെയിം: {0} ഉള്ള സർട്ടിഫിക്കറ്റ് ഇല്ലാതാക്കി: {1}</value>
+  </data>
+    <data name="AppControlCertCheckExistingMessage" xml:space="preserve">
+    <value>വ്യക്തിഗത യൂസർ സ്റ്റോറിൽ '{0}' എന്ന കോമൺ നെയിം ഉള്ള ഒരു സർട്ടിഫിക്കറ്റ് ഇതിനകം നിലവിലുണ്ടോ എന്ന് പരിശോധിക്കുന്നു.</value>
+  </data>
+    <data name="AppControlCertExistingCountRemovingMessage" xml:space="preserve">
+    <value>'{1}' എന്ന കോമൺ നെയിം ഉള്ള {0} സർട്ടിഫിക്കറ്റുകൾ സിസ്റ്റത്തിൽ ഇതിനകം നിലവിലുണ്ട്. അവ നീക്കം ചെയ്യുന്നു</value>
+  </data>
+  <data name="ConfirmExitTitle" xml:space="preserve">
+  <value>ആപ്ലിക്കേഷനിൽ നിന്ന് പുറത്തുകടക്കണോ?</value>
+</data>
+<data name="ConfirmExitMsg" xml:space="preserve">
+  <value>ഒരു പ്രവർത്തനം നിലവിൽ നടന്നുകൊണ്ടിരിക്കുകയാണ്. ഇപ്പോൾ പുറത്തുകടക്കുന്നത് ടാസ്ക്കുകൾ അപൂർണ്ണമാകാൻ കാരണമായേക്കാം. നിങ്ങൾക്ക് പുറത്തുകടക്കണമെന്ന് ഉറപ്പാണോ?</value>
+</data>
+  <data name="AppCloseConfirmationSettingsCard.Description" xml:space="preserve">
+    <value>ആപ്പ് ക്ലോസ് ചെയ്യുമ്പോൾ സ്ഥിരീകരണം ചോദിക്കണോ എന്ന് തിരഞ്ഞെടുക്കുക.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.Header" xml:space="preserve">
+    <value>ആപ്പ് ക്ലോസ് ചെയ്യുന്നതിനുള്ള സ്ഥിരീകരണം</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>ആപ്പ് ക്ലോസ് ചെയ്യുമ്പോൾ സ്ഥിരീകരണം ചോദിക്കണോ എന്ന് തിരഞ്ഞെടുക്കുക.</value>
+  </data>
+  <data name="AppCloseConfirmationSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>ആപ്പ് ക്ലോസ് ചെയ്യുമ്പോൾ സ്ഥിരീകരണം ചോദിക്കണോ എന്ന് തിരഞ്ഞെടുക്കുക.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.Content" xml:space="preserve">
+    <value>ഒരിക്കലുമില്ല</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>ആപ്പ് ക്ലോസ് ചെയ്യുമ്പോൾ ഒരിക്കലും സ്ഥിരീകരണം ചോദിക്കരുത്.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionNeverSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>ആപ്പ് ക്ലോസ് ചെയ്യുമ്പോൾ ഒരിക്കലും സ്ഥിരീകരണം ചോദിക്കരുത്.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.Content" xml:space="preserve">
+    <value>എപ്പോഴും</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>ആപ്പ് ക്ലോസ് ചെയ്യുമ്പോൾ എപ്പോഴും സ്ഥിരീകരണം ചോദിക്കുക.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAlwaysSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>ആപ്പ് ക്ലോസ് ചെയ്യുമ്പോൾ എപ്പോഴും സ്ഥിരീകരണം ചോദിക്കുക.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.Content" xml:space="preserve">
+    <value>ഓട്ടോമാറ്റിക്</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.ToolTipService.ToolTip" xml:space="preserve">
+    <value>എന്തെങ്കിലും പ്രവർത്തനം നടക്കുമ്പോൾ ചില പ്രത്യേക സാഹചര്യങ്ങളിൽ മാത്രം ആപ്പ് ക്ലോസ് ചെയ്യുന്നതിന് മുമ്പ് സ്ഥിരീകരണം ചോദിക്കുക.</value>
+  </data>
+  <data name="AppCloseConfirmationOptionAutomaticSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
+    <value>എന്തെങ്കിലും പ്രവർത്തനം നടക്കുമ്പോൾ ചില പ്രത്യേക സാഹചര്യങ്ങളിൽ മാത്രം ആപ്പ് ക്ലോസ് ചെയ്യുന്നതിന് മുമ്പ് സ്ഥിരീകരണം ചോദിക്കുക.</value>
+  </data>
 </root>
